# investments-info-website

./: .gitignore  .gitmodules  .stylish-haskell.yaml  .travis.yml  Dockerfile  Main.hs  Makefile  Procfile  README.md  csvCompanies.csv  default.nix  deploy.sh  install.sh  investments-info.cabal  investments-info.nix  package.yaml  package.yaml.txt  result  shell.nix  stack.yaml  yahoo-finance.cabal
API/: API.cabal  ChangeLog.md  InvestmentsApi.cabal  LICENSE
API/src/: Lib.hs  Server.hs
MailchimpSimple/: MailchimpSimple.cabal  stack.yaml
MailchimpSimple/src/: MailchimpSimple.hs
MailchimpSimple/src/Utils/: Logger.hs  Types.hs
app/: DevelMain.hs  Migration.hs  devel.hs  main.hs
config/: models  routes  settings.yml  test-settings.yml
docs/: heroku.org
finance-info/: finance-info.cabal  package.yaml
finance-info/config/: test-settings.yml
finance-info/templates/: homepage.hamlet
investments-info/: Makefile  deploy.sh  install.sh  investments-info.cabal  package.yaml
investments-info/config/: keter.yml  settings.yml
investments-info/script/: YahooHistorical.hs
investments-info/src/: Application.hs
investments-info/src/Handler/: Home.hs
investments-info/templates/: homepage.hamlet
news-fetcher/: default.nix  news-fetcher.cabal  stack.yaml
news-fetcher/src/Text/HTML/: Freader.hs  Fscraper.hs
newsletter/: ChangeLog.md  newsletter.cabal  stack.yaml
newsletter/src/: Newsletter.hs
newsletter/src/II/: Newsletter.hs
push-messages/: ChangeLog.md  push-messages.cabal
push-server/: ChangeLog.md  push-server.cabal
push-server/src/: Main.hs
src/: Application.hs  Foundation.hs  Import.hs  Model.hs  Settings.hs
src/Handler/: About.hs  Admin.hs  Api.hs  ApiCompanies.hs  ApiUsers.hs  Auth.hs  Common.hs  Company.hs  CompanyDetails.hs  CompanyList.hs  GraphLink.hs  Historical.hs  Home.hs  LogViewer.hs  NewsletterManager.hs  NewsletterNewUser.hs  NewsletterSend.hs  NewsletterSendt.hs  NewsletterView.hs  Profile.hs  SearchArticles.hs  SearchCompanies.hs  Sessions.hs  StoryDetails.hs  StoryList.hs
src/Helper/: Aws.hs  Fixtures.hs  FormHelper.hs  Forms.hs  Helper.hs  Heroku.hs  YahooDB.hs  YahooHelper.hs
src/Import/: NoFoundation.hs
src/Model/: BCrypt.hs  Instances.hs
src/Scripts/: YahooHistorical.hs
src/Settings/: StaticFiles.hs
static/css/: bootstrap.css  main.css
templates/: default-layout-wrapper.hamlet  default-layout-wrapper_old.hamlet  default-layout.hamlet  default-layout_old.hamlet  graphs.hamlet  homepage.hamlet  homepage.lucius  newsletter-layout.hamlet  storylist.hamlet
templates/company/: newcompany.hamlet
templates/html5up-stellar/: index.html
templates/layout/: newsletter-layout-newuser-wrapper.hamlet  newsletter-layout-wrapper.hamlet
test/: TestImport.hs
test/Handler/: CommentSpec.hs  CommonSpec.hs  HomeSpec.hs  ProfileSpec.hs
yadata/: default.nix  nixpkgs.json  shell.nix  stack.yaml  yadata.cabal
yadata/app/: Main.hs
yadata/src/Yadata/: LibAPI.hs  LibCSV.hs  LibTS.hs  LibYahoo.hs
yahoo-finance/: .gitignore  package.yaml
yahoo-finance/app/: devel.hs
yahoo-finance/config/: settings.yml
