name:           investments-info
version:        0.1.0
build-type:     Simple
cabal-version:  >= 1.10
author:         Sasa Bogicevic
maintainer:     t4nt0r@pm.me

flag dev
  description: Turn on development settings, like auto-reload templates.
  manual: False
  default: False

flag library-only
  description: Build for use with "yesod devel"
  manual: False
  default: False

library
  hs-source-dirs:
      src
  default-extensions: NoImplicitPrelude OverloadedStrings RecordWildCards LambdaCase MultiWayIf
  build-depends:
                 aeson
               , async
               , base
               , bcrypt
               , blaze-builder
               , blaze-html
               , byteable
               , bytestring
               , case-insensitive
               , containers
               , cookie
               , cryptohash
               , directory
               , email-validate
               , errors
               , esqueleto
               , exceptions
               , fast-logger
               , file-embed
               , foreign-store
               , generic-deriving
               , hashable
               , http-client
               , http-client-tls
               , http-types
               , monad-control
               , monad-logger
               , mtl
               , persistent
               , persistent-postgresql
               , persistent-sqlite
               , persistent-template
               , pretty-show
               , process
               , safe
               , ses-html
               , shakespeare
               , stm
               , template-haskell
               , text
               , time
               , transformers
               , unordered-containers
               , utf8-string
               , uuid
               , uuid-types
               , vector
               , wai
               , wai-extra
               , wai-logger
               , warp
               , warp-tls
               , wreq
               , yaml
               , yesod
               , yesod-auth
               , yesod-core
               , yesod-form
               , yesod-static
               , yesod-persistent
               , data-default
               , universum
               , hjsmin
               , mono-traversable
               , financial-news-scraper
               , conduit
               , conduit-combinators
  if (flag(dev)) || (flag(library-only))
    ghc-options: -Wall -fwarn-tabs -fwarn-unused-imports -O0
    cpp-options: -DDEVELOPMENT
  else
    ghc-options: -Wall -fwarn-tabs -fwarn-unused-imports -O2
  exposed-modules:
      Application
      Foundation
      Handler.About
      Handler.Admin
      Handler.Auth
      Handler.Common
      Handler.Company
      Handler.CompanyDetails
      Handler.CompanyList
      Handler.Historical
      Handler.Home
      Handler.LogViewer
      Handler.Profile
      Handler.SearchArticles
      Handler.SearchCompanies
      Handler.Sessions
      Handler.StoryDetails
      Handler.StoryList
      Helper.Fixtures
      Helper.FormHelper
      Helper.Forms
      Helper.Helper
      Import
      Import.NoFoundation
      Model
      Model.BCrypt
      Settings
      Settings.StaticFiles
  other-modules:
      Paths_investments_info
  default-language: Haskell2010

executable investments-info
  main-is: main.hs
  hs-source-dirs:
      app
  default-extensions: NoImplicitPrelude OverloadedStrings RecordWildCards LambdaCase MultiWayIf
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                  aeson
                , async
                , base
                , bcrypt
                , blaze-builder
                , blaze-html
                , byteable
                , bytestring
                , case-insensitive
                , containers
                , cookie
                , cryptohash
                , directory
                , email-validate
                , errors
                , esqueleto
                , exceptions
                , fast-logger
                , file-embed
                , foreign-store
                , generic-deriving
                , hashable
                , http-client
                , http-client-tls
                , http-types
                , investments-info
                , monad-control
                , monad-logger
                , mtl
                , persistent
                , persistent-postgresql
                , persistent-sqlite
                , persistent-template
                , pretty-show
                , process
                , safe
                , ses-html
                , shakespeare
                , split
                , stm
                , template-haskell
                , text
                , time
                , transformers
                , unordered-containers
                , utf8-string
                , uuid
                , uuid-types
                , vector
                , wai
                , wai-extra
                , wai-logger
                , warp
                , warp-tls
                , wreq
                , yaml
                , yesod
                , yesod-auth
                , yesod-core
                , yesod-form
                , yesod-static
                , yesod-persistent
                , data-default
                , universum
                , hjsmin
                , mono-traversable
                , financial-news-scraper
                , conduit
                , conduit-combinators
  if flag(library-only)
    buildable: False
  other-modules:
      DevelMain
      Migration
      Paths_investments_info
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  default-extensions: NoImplicitPrelude OverloadedStrings RecordWildCards LambdaCase MultiWayIf
  ghc-options: -Wall
  build-depends:
                  aeson
                , async
                , base
                , bcrypt
                , blaze-builder
                , blaze-html
                , byteable
                , bytestring
                , case-insensitive
                , containers
                , cookie
                , cryptohash
                , directory
                , email-validate
                , errors
                , esqueleto
                , exceptions
                , fast-logger
                , file-embed
                , foreign-store
                , generic-deriving
                , hashable
                , hspec
                , http-client
                , http-client-tls
                , http-types
                , investments-info
                , monad-control
                , monad-logger
                , mtl
                , persistent
                , persistent-postgresql
                , persistent-sqlite
                , persistent-template
                , pretty-show
                , process
                , safe
                , ses-html
                , shakespeare
                , template-haskell
                , text
                , time
                , transformers
                , unordered-containers
                , utf8-string
                , uuid
                , uuid-types
                , vector
                , wai
                , wai-extra
                , wai-logger
                , warp
                , warp-tls
                , wreq
                , yaml
                , yesod
                , yesod-auth
                , yesod-core
                , yesod-form
                , yesod-static
                , yesod-persistent
                , yesod-test
                , data-default
                , universum
                , hjsmin
                , mono-traversable
                , financial-news-scraper
                , conduit
                , conduit-combinators
  other-modules:
      Handler.HomeSpec
      Handler.ProfileSpec
      TestImport
      Paths_investments_info
  default-language: Haskell2010
