name:          yahoo-finance
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          yahoo-finance
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , wreq   >= 0.5.0.0 && < 0.5.1.0
                  , text
                  , lens   > 4.15.0   && <= 4.15.4
                  , aeson  > 1.1.2   && <= 1.1.2.0
                  , lens-aeson  > 1.0.1   && <= 1.0.2
                  , containers  >  0.5.7.0   && <= 0.5.7.1
                  , either      > 4.4.1.0    && <= 4.4.1.1
